# kaidan-video-generator

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  image_generator.py  main.py  pyproject.toml  requirements.txt  scraper.py  text_processor.py  video_generator.py  voice_generator.py
app/: config.py  database.py  main.py  models.py
app/pipeline/: events.py  executor.py  retry.py  stages.py
app/services/: accent_estimator.py  bundle_generator.py  chapter_generator.py  clients.py  hook_generator.py  image_generator.py  kikikaikai_scraper.py  scraper.py  shorts_generator.py  text_processor.py  thumbnail_generator.py  tiktok_uploader.py  video_generator.py  voice_generator.py  youtube_analytics.py  youtube_uploader.py
app/ui/: category_colors.py  layout.py  (+1 more)
docs/: privacy.html  terms.html
migrations/: import_json.py
scripts/: audit_voicevox_readings.py
tests/: test_accent_estimator.py  test_bundle_generator.py  test_category_colors.py  test_config.py  test_events.py  test_image_prompt_examples.py  test_kikikaikai_scraper.py  test_models.py  test_paths.py  test_retry.py  test_scraper.py  test_shorts_config.py  test_shorts_database.py  test_shorts_duration.py  test_shorts_executor.py  test_shorts_image_layout.py  test_shorts_integration.py  test_shorts_metadata.py  test_shorts_models.py  test_shorts_paths.py  test_shorts_stages.py  test_subtitle_split.py  test_text_processor.py  test_title_card_templates.py  test_title_clip_fade.py  test_title_narration.py  test_url_state.py  test_usage_report.py  test_visual_style_profiles.py
(+13 files in other folders)
